syntax = "proto3";

option csharp_namespace = "Server";

package matriculas;

service Matriculas {
  rpc SetMatricula (Dados) returns (DadosRecebidos);
  rpc GetDisponibilidade (ExisteDisponibilidade) returns (Disponibilidade);
}

// The request message
message Dados {
	bool cameraEntrada = 1;
	string matricula = 2;
	string fotoLocation = 3;
	string user = 4;
	string msgValidacao = 5;
}

// The response message
message DadosRecebidos {
	bool recebidos = 1; // só para teste
}

message ExisteDisponibilidade{
}

message Disponibilidade{
	bool disponivel = 1;
}